# flashnotes

./: .repomixignore  AUDIT.md  CLAUDE.md  LICENSE  README.md  flow.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: idea.md  idea2.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hotkey.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: buffer.rs  mod.rs  settings.rs
src-tauri/src/db/: backup.rs  connection.rs  mod.rs  queries.rs  schema.rs
src/lib/codemirror/: markdown-preview.ts  markdown-styles.ts
src/lib/codemirror/themes/: nord.ts
src/lib/components/: BufferItem.svelte  CommandPalette.svelte  Editor.svelte  EditorHeader.svelte  ErrorModal.svelte  SearchResults.svelte  SettingsModal.svelte  Sidebar.svelte  Toast.svelte
src/lib/constants/: welcome.ts
src/lib/hooks/: useDragToReorder.svelte.ts  useKeyboardShortcuts.svelte.ts
src/lib/stores/: buffers.svelte.ts  settings.svelte.ts  toast.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: debounce.ts  time.ts
src/routes/: +error.svelte  +page.svelte
tests/: test-buffer-ops.sh
